samples/_failures_safe/1761140052_6b888e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22d6238b.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | int main
      | ^~~
